--- a/New_application/New_application.csproj
+++ b/New_application/New_application.csproj
@@ -124,6 +124,7 @@
     </Reference>
   </ItemGroup>
   <ItemGroup>
+    <Content Include="404.html" />
     <Content Include="Admin\frmRoleSetup.aspx" />
     <Content Include="Admin\frmUserSetup.aspx" />
     <Content Include="assets\css\style.css" />
