--- a/New_application/New_application.csproj
+++ b/New_application/New_application.csproj
@@ -128,6 +128,7 @@
     <Content Include="Admin\frmRoleSetup.aspx" />
     <Content Include="Admin\frmUserSetup.aspx" />
     <Content Include="assets\css\style.css" />
+    <Content Include="assets\css\style2.css" />
     <Content Include="assets\img\apple-touch-icon.png" />
     <Content Include="assets\img\card.jpg" />
     <Content Include="assets\img\favicon.png" />
@@ -151,7 +152,10 @@
     <Content Include="assets\img\slides-1.jpg" />
     <Content Include="assets\img\slides-2.jpg" />
     <Content Include="assets\img\slides-3.jpg" />
+    <Content Include="assets\js\bootstrap.min.js" />
     <Content Include="assets\js\main.js" />
+    <Content Include="assets\js\pcoded.min.js" />
+    <Content Include="assets\js\vendor-all.min.js" />
     <Content Include="assets\scss\Readme.txt" />
     <Content Include="assets\vendor\apexcharts\apexcharts.min.js" />
     <Content Include="assets\vendor\bootstrap-icons\bootstrap-icons.css" />
@@ -1015,6 +1019,7 @@
     <Content Include="font-awesome\scss\_stacked.scss" />
     <Content Include="font-awesome\scss\_variables.scss" />
     <Content Include="LOVMaster.Master" />
+    <Content Include="mainPage.Master" />
     <None Include="Scripts\jquery-3.4.1.intellisense.js" />
     <Content Include="pages\firstpage.aspx" />
     <Content Include="pages\frmDashboard.aspx" />
@@ -1106,6 +1111,13 @@
     </Compile>
     <Compile Include="main.Master.designer.cs">
       <DependentUpon>main.Master</DependentUpon>
+    </Compile>
+    <Compile Include="mainPage.Master.cs">
+      <DependentUpon>mainPage.Master</DependentUpon>
+      <SubType>ASPXCodeBehind</SubType>
+    </Compile>
+    <Compile Include="mainPage.Master.designer.cs">
+      <DependentUpon>mainPage.Master</DependentUpon>
     </Compile>
     <Compile Include="pages\firstpage.aspx.cs">
       <DependentUpon>firstpage.aspx</DependentUpon>
